# Infra

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: static.yml
OpenProject/: .env
architecture/: index.html
docs/: architecture.md  index.md  nas.md  openproject.md
docs/nas/: backup.md  installation.md  mount.md
docs/openproject/: installation.md
nas/installation/: index.html
nas/mount/: index.html
openproject/backup/: index.html
openproject/installation/: index.html
openproject/user-guide/: index.html
search/: search_index.json
src/NAS/: windows_backup.bat
src/PostgreSQL/: .env  docker-compose.db.yml
src/openproject/: .env  docker-compose.yml
src/openproject/proxy/: Dockerfile
src/openproject/scripts/: nasmounter.sh
