[tool.poetry]
name = "src"
version = "0.1.0"
description = "package manager for the project"
authors = ["dilipteja1 <tejadilip23898@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"